added undoable property

--- a/UndoExample/Views/MainWindow.axaml
+++ b/UndoExample/Views/MainWindow.axaml
@@ -14,8 +14,10 @@
     <Design.DataContext>
       <vm:MainWindowViewModel/>
     </Design.DataContext>
-  <Grid  Margin="12" >
-    <StackPanel Spacing="12">
+  <Grid  Margin="12" ColumnDefinitions="320,1*">
+    <ListBox Items="{Binding History}"/>
+    
+    <StackPanel Spacing="12" Grid.Column="1">
     <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <TextBlock Text="{Binding MainColor.Color}" HorizontalAlignment="Center"/>
     <Button Content="Add" Command="{Binding RandomColorCommand}" HorizontalAlignment="Center"/>
